# ml-runner-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements-datasphere.txt  requirements.txt
alembic/: env.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routers/: datasets.py  experiments.py  health.py  models.py  training.py  validation.py
app/core/: config.py  database.py
app/integrations/: __init__.py  gdrive.py
app/jobs/: __init__.py  base.py  datasphere_runner.py  local_runner.py  registry.py  worker.py
app/ml/: __init__.py  callbacks.py  data_loader.py  preprocessing.py  trainer.py  validator.py
app/models/: __init__.py  dataset.py  enums.py  experiment.py  mixins.py  registered_model.py  run.py
app/schemas/: common.py  dataset.py  experiment.py  model.py  training.py  validation.py
app/services/: __init__.py  dataset_service.py  experiment_service.py  model_service.py  training_service.py  validation_service.py
scripts/: setup_db.sh
